2020-09-23 Rajarshi Guha

  * Updated @export annotation with function name to avoid interpretation as 
  S3 method
  
  * Refactored do.typing to set.atom.types and updated to use J notation
  
  * Refactored methods to use the renamed function
  
2020-03-15 Rajarshi Guha

  * Generate bond order enums and store in rcdk package env
  
  * Add a method to retrieve bond order enums
  
  * Add unit tests
  
2013-10-30  Guha  <guhar@HG-01881061-LM8.local>

	* R/fingerprint.R (get.fingerprint): Updated to ensure we call
	Pubchem fingerprinter with appropriate constructor arguments

	* R/rcdk.R: Added internal helper method to get a DefaultChemObjectBuilder

2013-10-06  Guha  <guhar@HG-01881061-LM8.local>

	* R/fingerprint.R (get.fingerprint): Included LINGO fingerprinter
	as an available fingerprint type

	* man/getfp.Rd: Updated man page to describe feature,count
	fingeprints. Added reference for signature fingerprint

	* R/fingerprint.R (get.fingerprint): Added support for the
	signature fingerprint. We also support the raw and count mode
	fingerprint types in general. If these modes are requested, the
	fingerprint is a featvec object

2013-01-05  Guha  <guhar@citdnstjonesr.cit.nih.gov>

	* man/getfp.Rd: Updated man page for new fingerprints

	* inst/unitTests/runit.rcdk.R (test.fp): Added some simple
	fingerprint test cases

	* R/rcdk.R (get.fingerprint): Updated to use the new
	IBitFingerprint interface. Added support for the Kelkota Roth and shortest
	path fingerprinters

	* Updated to latest CDK master, supporting new atom types

2012-11-17 Rajarshi Guha

	* R/iterating.R: Updated to use the proper class for iterating
	over SD files. Thanks to Xavier Arroyo for reporting this

2012-09-01  Rajarshi Guha  <guhar@Rajarshi-Guha-MacBook-Pro.local>

	* R/formula.R (get.mol2formula): Removed a debug statement

2012-07-05  Rajarshi Guha  <guhar@OfficeMac.local>

	* inst/unitTests/runit.match.R (test.match4): Added a unit test
	for the new matches update
