@@ -1,6 +1,6 @@
 Package: rcdk
-Version: 3.5.2
-Date: 2020-09-28
+Version: 3.5.3
+Date: 2020-12-21
 Title: Interface to the 'CDK' Libraries
 Authors@R: c(person('Rajarshi', 'Guha', role=c('aut',"cph"), email='rajarshi.guha@gmail.com'),
              person('Zachary', 'Charlop-Powers', role=c('cre'), email='zach.charlop.powers@gmail.com'),
