@@ -1,0 +1,186 @@
+mol1_1_1
+ OpenBabel12112014373D
+VDW energy = 68.16
+ 13 12  0  0  0  0  0  0  0  0999 V2000
+    1.0000    1.0000    1.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
+    2.5210    1.0000    1.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
+    3.0180    1.7030   -0.2180 C   0  0  0  0  0  0  0  0  0  0  0  0
+    3.3895    1.0575   -1.1876 O   0  0  0  0  0  0  0  0  0  0  0  0
+    3.0575    3.0573   -0.2506 O   0  0  0  0  0  0  0  0  0  0  0  0
+    3.0046    1.6840    2.1847 N   0  0  0  0  0  0  0  0  0  0  0  0
+    0.6174    2.0206    1.0000 H   0  0  0  0  0  0  0  0  0  0  0  0
+    0.6416    0.4830    0.1099 H   0  0  0  0  0  0  0  0  0  0  0  0
+    0.6416    0.4830    1.8901 H   0  0  0  0  0  0  0  0  0  0  0  0
+    2.8843   -0.0277    1.0000 H   0  0  0  0  0  0  0  0  0  0  0  0
+    3.4040    3.3509   -1.1082 H   0  0  0  0  0  0  0  0  0  0  0  0
+    4.0246    1.6840    2.1847 H   0  0  0  0  0  0  0  0  0  0  0  0
+    2.6646    1.2032    3.0176 H   0  0  0  0  0  0  0  0  0  0  0  0
+  1  2  1  0  0  0  0
+  1  7  1  0  0  0  0
+  1  8  1  0  0  0  0
+  1  9  1  0  0  0  0
+  2  3  1  0  0  0  0
+  2  6  1  0  0  0  0
+  2 10  1  0  0  0  0
+  3  4  2  0  0  0  0
+  3  5  1  0  0  0  0
+  5 11  1  0  0  0  0
+  6 12  1  0  0  0  0
+  6 13  1  0  0  0  0
+M  END
+$$$$
+mol1_1_2
+ OpenBabel12112014373D
+VDW energy = 68.44
+ 13 12  0  0  0  0  0  0  0  0999 V2000
+    1.0000    1.0000    1.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
+    2.5210    1.0000    1.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
+    3.0180    1.7030   -0.2180 C   0  0  0  0  0  0  0  0  0  0  0  0
+    2.2852    1.8388   -1.1872 O   0  0  0  0  0  0  0  0  0  0  0  0
+    4.2816    2.1919   -0.2506 O   0  0  0  0  0  0  0  0  0  0  0  0
+    3.0046    1.6840    2.1847 N   0  0  0  0  0  0  0  0  0  0  0  0
+    0.6174    2.0206    1.0000 H   0  0  0  0  0  0  0  0  0  0  0  0
+    0.6416    0.4830    0.1099 H   0  0  0  0  0  0  0  0  0  0  0  0
+    0.6416    0.4830    1.8901 H   0  0  0  0  0  0  0  0  0  0  0  0
+    2.8843   -0.0277    1.0000 H   0  0  0  0  0  0  0  0  0  0  0  0
+    4.4431    2.6157   -1.1085 H   0  0  0  0  0  0  0  0  0  0  0  0
+    4.0246    1.6840    2.1847 H   0  0  0  0  0  0  0  0  0  0  0  0
+    2.6646    1.2032    3.0176 H   0  0  0  0  0  0  0  0  0  0  0  0
+  1  2  1  0  0  0  0
+  1  7  1  0  0  0  0
+  1  8  1  0  0  0  0
+  1  9  1  0  0  0  0
+  2  3  1  0  0  0  0
+  2  6  1  0  0  0  0
+  2 10  1  0  0  0  0
+  3  4  2  0  0  0  0
+  3  5  1  0  0  0  0
+  5 11  1  0  0  0  0
+  6 12  1  0  0  0  0
+  6 13  1  0  0  0  0
+M  END
+$$$$
+mol1_1_3
+ OpenBabel12112014373D
+VDW energy = 71.01
+ 13 12  0  0  0  0  0  0  0  0999 V2000
+    1.0000    1.0000    1.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
+    2.5210    1.0000    1.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
+    3.0180    1.7030   -0.2180 C   0  0  0  0  0  0  0  0  0  0  0  0
+    3.7212    2.6968   -0.1060 O   0  0  0  0  0  0  0  0  0  0  0  0
+    2.6908    1.2402   -1.4490 O   0  0  0  0  0  0  0  0  0  0  0  0
+    3.0046    1.6840    2.1847 N   0  0  0  0  0  0  0  0  0  0  0  0
+    0.6174    2.0206    1.0000 H   0  0  0  0  0  0  0  0  0  0  0  0
+    0.6416    0.4830    0.1099 H   0  0  0  0  0  0  0  0  0  0  0  0
+    0.6416    0.4830    1.8901 H   0  0  0  0  0  0  0  0  0  0  0  0
+    2.8843   -0.0277    1.0000 H   0  0  0  0  0  0  0  0  0  0  0  0
+    3.0918    1.8081   -2.1260 H   0  0  0  0  0  0  0  0  0  0  0  0
+    4.0246    1.6840    2.1847 H   0  0  0  0  0  0  0  0  0  0  0  0
+    2.6646    1.2032    3.0176 H   0  0  0  0  0  0  0  0  0  0  0  0
+  1  2  1  0  0  0  0
+  1  7  1  0  0  0  0
+  1  8  1  0  0  0  0
+  1  9  1  0  0  0  0
+  2  3  1  0  0  0  0
+  2  6  1  0  0  0  0
+  2 10  1  0  0  0  0
+  3  4  2  0  0  0  0
+  3  5  1  0  0  0  0
+  5 11  1  0  0  0  0
+  6 12  1  0  0  0  0
+  6 13  1  0  0  0  0
+M  END
+$$$$
+mol1_2_1
+ OpenBabel12112014373D
+VDW energy = 67.32
+ 13 12  0  0  0  0  0  0  0  0999 V2000
+    1.0000    1.0000    1.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
+    2.5210    1.0000    1.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
+    3.0180    1.7030    2.2180 C   0  0  0  0  0  0  0  0  0  0  0  0
+    3.3895    1.0575    3.1876 O   0  0  0  0  0  0  0  0  0  0  0  0
+    3.0575    3.0573    2.2506 O   0  0  0  0  0  0  0  0  0  0  0  0
+    3.0046    1.6840   -0.1847 N   0  0  0  0  0  0  0  0  0  0  0  0
+    0.6174    2.0206    1.0000 H   0  0  0  0  0  0  0  0  0  0  0  0
+    0.6416    0.4830    0.1099 H   0  0  0  0  0  0  0  0  0  0  0  0
+    0.6416    0.4830    1.8901 H   0  0  0  0  0  0  0  0  0  0  0  0
+    2.8843   -0.0277    1.0000 H   0  0  0  0  0  0  0  0  0  0  0  0
+    3.4040    3.3509    3.1082 H   0  0  0  0  0  0  0  0  0  0  0  0
+    4.0246    1.6840   -0.1847 H   0  0  0  0  0  0  0  0  0  0  0  0
+    2.6646    2.6457   -0.1847 H   0  0  0  0  0  0  0  0  0  0  0  0
+  1  2  1  0  0  0  0
+  1  7  1  0  0  0  0
+  1  8  1  0  0  0  0
+  1  9  1  0  0  0  0
+  2  3  1  0  0  0  0
+  2  6  1  0  0  0  0
+  2 10  1  0  0  0  0
+  3  4  2  0  0  0  0
+  3  5  1  0  0  0  0
+  5 11  1  0  0  0  0
+  6 12  1  0  0  0  0
+  6 13  1  0  0  0  0
+M  END
+$$$$
+mol1_2_2
+ OpenBabel12112014373D
+VDW energy = 69.14
+ 13 12  0  0  0  0  0  0  0  0999 V2000
+    1.0000    1.0000    1.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
+    2.5210    1.0000    1.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
+    3.0180    1.7030    2.2180 C   0  0  0  0  0  0  0  0  0  0  0  0
+    2.2852    1.8388    3.1872 O   0  0  0  0  0  0  0  0  0  0  0  0
+    4.2816    2.1919    2.2506 O   0  0  0  0  0  0  0  0  0  0  0  0
+    3.0046    1.6840   -0.1847 N   0  0  0  0  0  0  0  0  0  0  0  0
+    0.6174    2.0206    1.0000 H   0  0  0  0  0  0  0  0  0  0  0  0
+    0.6416    0.4830    0.1099 H   0  0  0  0  0  0  0  0  0  0  0  0
+    0.6416    0.4830    1.8901 H   0  0  0  0  0  0  0  0  0  0  0  0
+    2.8843   -0.0277    1.0000 H   0  0  0  0  0  0  0  0  0  0  0  0
+    4.4431    2.6157    3.1085 H   0  0  0  0  0  0  0  0  0  0  0  0
+    4.0246    1.6840   -0.1847 H   0  0  0  0  0  0  0  0  0  0  0  0
+    2.6646    2.6457   -0.1847 H   0  0  0  0  0  0  0  0  0  0  0  0
+  1  2  1  0  0  0  0
+  1  7  1  0  0  0  0
+  1  8  1  0  0  0  0
+  1  9  1  0  0  0  0
+  2  3  1  0  0  0  0
+  2  6  1  0  0  0  0
+  2 10  1  0  0  0  0
+  3  4  2  0  0  0  0
+  3  5  1  0  0  0  0
+  5 11  1  0  0  0  0
+  6 12  1  0  0  0  0
+  6 13  1  0  0  0  0
+M  END
+$$$$
+mol1_2_3
+ OpenBabel12112014373D
+VDW energy = 69.26
+ 13 12  0  0  0  0  0  0  0  0999 V2000
+    1.0000    1.0000    1.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
+    2.5210    1.0000    1.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
+    3.0180    1.7030    2.2180 C   0  0  0  0  0  0  0  0  0  0  0  0
+    3.7212    2.6968    2.1060 O   0  0  0  0  0  0  0  0  0  0  0  0
+    2.6908    1.2402    3.4490 O   0  0  0  0  0  0  0  0  0  0  0  0
+    3.0046    1.6840   -0.1847 N   0  0  0  0  0  0  0  0  0  0  0  0
+    0.6174    2.0206    1.0000 H   0  0  0  0  0  0  0  0  0  0  0  0
+    0.6416    0.4830    0.1099 H   0  0  0  0  0  0  0  0  0  0  0  0
+    0.6416    0.4830    1.8901 H   0  0  0  0  0  0  0  0  0  0  0  0
+    2.8843   -0.0277    1.0000 H   0  0  0  0  0  0  0  0  0  0  0  0
+    3.0918    1.8081    4.1260 H   0  0  0  0  0  0  0  0  0  0  0  0
+    4.0246    1.6840   -0.1847 H   0  0  0  0  0  0  0  0  0  0  0  0
+    2.6646    2.6457   -0.1847 H   0  0  0  0  0  0  0  0  0  0  0  0
+  1  2  1  0  0  0  0
+  1  7  1  0  0  0  0
+  1  8  1  0  0  0  0
+  1  9  1  0  0  0  0
+  2  3  1  0  0  0  0
+  2  6  1  0  0  0  0
+  2 10  1  0  0  0  0
+  3  4  2  0  0  0  0
+  3  5  1  0  0  0  0
+  5 11  1  0  0  0  0
+  6 12  1  0  0  0  0
+  6 13  1  0  0  0  0
+M  END
+$$$$
