@@ -1,0 +1,26 @@
+% Generated by roxygen2: do not edit by hand
+% Please edit documentation in R/atoms.R
+\name{set.atom.types}
+\alias{set.atom.types}
+\title{Set the CDK atom types for all atoms in the molecule
+
+Calling this method will overwrite any pre-existing type information. 
+Currently there is no way to choose other atom typing schemes}
+\usage{
+set.atom.types(mol)
+}
+\arguments{
+\item{mol}{The molecule whose atoms should be typed}
+}
+\value{
+Nothing is returned, the molecule is modified in place
+}
+\description{
+Set the CDK atom types for all atoms in the molecule
+
+Calling this method will overwrite any pre-existing type information. 
+Currently there is no way to choose other atom typing schemes
+}
+\author{
+Rajarshi Guha (\email{rajarshi.guha@gmail.com})
+}
